Restart any animations when we allocate a composited layer.

As part of this, fix FrameView to note a compositing update is needed
when it is shown/hidden since it could gain/lose its composited layer
and, if shown/gained, then we want to immediately restart any
animations.

BUG=612436

Review-Url: https://codereview.chromium.org/2010963003
Cr-Commit-Position: refs/heads/master@{#397003}